force-app/main/default/objects/blng__CreditNoteAllocation__c/blng__CreditNoteAllocation__c.object-meta.xml
<CustomObject>
    <label>Credit Note Allocation</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Note Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>