force-app/main/default/objects/blng__CreditNoteAllocation__c/fields/blng__BillingGLRule__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingGLRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing GL Rule</label>
    <referenceTo>blng__GLRule__c</referenceTo>
    <relationshipLabel>Credit Note Allocations</relationshipLabel>
    <relationshipName>BillingGLRuleCreditNoteAllocations</relationshipName>
    <type>Lookup</type>
</CustomField>