force-app/main/default/objects/blng__CreditNoteAllocation__c/fields/blng__TaxTreatment__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxTreatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Treatment</label>
    <referenceTo>blng__TaxTreatment__c</referenceTo>
    <relationshipLabel>Credit Note Allocations</relationshipLabel>
    <relationshipName>TaxTreatmentCreditNoteAllocations</relationshipName>
    <type>Lookup</type>
</CustomField>