force-app/main/default/objects/blng__CreditNoteAllocation__c/fields/blng__Unallocated__c.field-meta.xml
<CustomField>
    <fullName>blng__Unallocated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unallocated?</label>
    <type>Checkbox</type>
</CustomField>